--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
 
+@tailwind base;
+@tailwind components;
 @tailwind utilities;
 
 body {
@@ -48,4 +50,4 @@ body {
 
 .rarity-legendary {
   @apply text-yellow-600;
-}    
+}
